=======
CHANGES
=======

3.5.2 (unreleased)
------------------

- ...

3.5.1 (2009-03-09)
------------------

- Remove deprecated code and thus remove dependency on zope.deferredimport.

- Change package's mailing list address to zope-dev at zope.org, as
  zope3-dev at zope.org is now retired. 

- Update package's description and documentation.

3.5.0 (2009-01-31)
------------------

- Remove old module declarations from classes.

- Use zope.container instead of zope.app.container.

3.4.0 (2007-09-01)
------------------

Initial release as an independent package